--- a/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
@@ -16,6 +16,7 @@
         <!-- CSS Libraries -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
         <link th:href="@{/lib/slick/slick.css}" rel="stylesheet">
         <link th:href="@{/lib/slick/slick-theme.css}" rel="stylesheet">
 
@@ -91,26 +92,70 @@
                                                 <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                             </div>
                                         </div>
+<!--                                        <div class="p-size">-->
+<!--                                            <h4>Kích thước:</h4>-->
+<!--                                            <div class="btn-group btn-group-sm">-->
+<!--                                                <button type="button" class="btn">S</button>-->
+<!--                                                <button type="button" class="btn">M</button>-->
+<!--                                                <button type="button" class="btn">L</button>-->
+<!--                                                <button type="button" class="btn">XL</button>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                        <div class="p-color">-->
+<!--                                            <h4>Màu sắc:</h4>-->
+<!--                                            <div class="btn-group btn-group-sm">-->
+<!--                                                <button type="button" class="btn">Trắng</button>-->
+<!--                                                <button type="button" class="btn">Đen</button>-->
+<!--                                                <button type="button" class="btn">Xanh</button>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
                                         <div class="p-size">
-                                            <h4>Kích thước:</h4>
-                                            <div class="btn-group btn-group-sm">
-                                                <button type="button" class="btn">S</button>
-                                                <button type="button" class="btn">M</button>
-                                                <button type="button" class="btn">L</button>
-                                                <button type="button" class="btn">XL</button>
+                                            <div style="display:inline-block">
+                                                <h4>Kích thước:</h4>
+                                                <div class="size-options btn-group btn-group-sm">
+                                                    <label>
+                                                        <input type="radio" name="size" value="S">S
+
+                                                    </label>
+                                                    <label>
+                                                        <input type="radio" name="size" value="M">M
+
+                                                    </label>
+                                                    <label>
+                                                        <input type="radio" name="size" value="L">L
+
+                                                    </label>
+                                                    <label>
+                                                        <input type="radio" name="size" value="XL">XL
+
+                                                    </label>
+                                                </div>
                                             </div>
                                         </div>
+
+
+
                                         <div class="p-color">
-                                            <h4>Màu sắc:</h4>
-                                            <div class="btn-group btn-group-sm">
-                                                <button type="button" class="btn">Trắng</button>
-                                                <button type="button" class="btn">Đen</button>
-                                                <button type="button" class="btn">Xanh</button>
+                                            <div>
+                                                <h4>Màu sắc:</h4>
+                                                <div class="abc btn-group btn-group-sm">
+                                                    <label>
+                                                        <input type="radio" name="color" value="Trắng"> Trắng
+                                                    </label>
+                                                    <label>
+                                                        <input type="radio" name="color" value="Đen"> Đen
+                                                    </label>
+                                                    <label>
+                                                        <input type="radio" name="color" value="Xanh"> Xanh
+                                                    </label>
+                                                </div>
                                             </div>
+
                                         </div>
                                         <div class="action">
                                             <button class="btn btnAddProductToCart" href="#"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
-                                            <button class="btn" href="#"><i class="fa fa-shopping-bag"></i>Mua ngay</button>
+<!--                                            <button class="btn" href="#"><i class="fa fa-shopping-bag"></i>Mua ngay</button>-->
+                                            <button class="btn" onclick="buy_product()"><i class="fa fa-shopping-bag"></i>Mua ngay</button>
                                         </div>
                                     </div>
                                 </div>
@@ -166,26 +211,12 @@
                                     <div id="reviews" class="container tab-pane fade">
                                         <div class="reviews-submitted">
                                             <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>
-                                            <div class="ratting">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                            </div>
                                             <p>
                                                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
                                             </p>
                                         </div>
                                         <div class="reviews-submit">
                                             <h4>Give your Review:</h4>
-                                            <div class="ratting">
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                            </div>
                                             <div class="row form">
 <!--                                                <div class="col-sm-6">-->
 <!--                                                    <input type="text" placeholder="Name">-->
@@ -383,6 +414,39 @@
                 }
             }
             return userId;
+        }
+        function buy_product(){
+            var userId = ''
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                if (cookie.startsWith('userId=')) {
+                    userId = cookie.substring('userId='.length, cookie.length);
+                    break;
+                }
+            }
+            var url="/api/history/add/"+userId;
+            $.ajax({
+                type:"POST",
+                url:url,
+                success:function (res){
+                    console.log(res);
+                    if(res=="add fail"){
+
+                    }else{
+                        removeAll_list_cartItem()
+                    }
+                },
+                error:function (xhr,status,error){
+
+                }
+            })
+
+        }
+        function removeAll_list_cartItem(){
+            document.querySelectorAll(".list_cartItem").forEach((item)=>{
+                item.remove();
+            });
         }
         form.addEventListener('submit', (event) => {
             event.preventDefault();
