--- a/d1-master/Project_Economic/src/main/resources/templates/login/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/login/index.html
@@ -16,12 +16,9 @@
     <!-- Style -->
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
 
-    <title>Login #7</title>
+    <title>Đăng nhập</title>
   </head>
   <body>
-  
-
-  
   <div class="content">
     <div class="container">
       <div class="row">
@@ -32,44 +29,45 @@
           <div class="row justify-content-center">
             <div class="col-md-8">
               <div class="mb-4">
-              <h3>Sign In</h3>
-              <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>
+              <h3>Đăng nhập</h3>
+<!--              <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>-->
             </div>
               <div th:if="${error}" th:class="align-items-center">
-                <h6 th:text="${error}" th:class="text-danger"></h6>
+                <h6 th:text="${error}" th:class="text-danger">{{error}}</h6>
               </div>
-            <form action="#" method="post" th:action="@{/api/users/home}" th:object="${userEntity}">
+
+            <form method="post" th:action="@{/api/users/home}" th:object="${userEntity}">
               <div class="form-group first mb-4">
-                <input type="text" class="form-control" id="username" placeholder="Username" th:field="*{username}">
+                <input type="text" class="form-control" id="username" placeholder="Tài khoản" th:field="*{username}">
 
               </div>
               <div class="form-group last mb-4">
-                <input type="password" class="form-control" id="password" placeholder="Password" th:field="*{password}">
+                <input type="password" class="form-control" id="password" placeholder="Mật khẩu" th:field="*{password}">
               </div>
               
               <div class="d-flex mb-5 align-items-center">
-                <label class="control control--checkbox mb-0"><span class="caption">Remember me</span>
+                <label class="control control--checkbox mb-0"><span class="caption">Ghi nhớ</span>
                   <input type="checkbox" checked="checked"/>
                   <div class="control__indicator"></div>
                 </label>
-                <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span>
+                <span class="ml-auto"><a href="#" class="forgot-pass">Quên mật khẩu</a></span>
               </div>
 
-              <input type="submit" value="Log In" class="btn btn-block btn-primary mb-2" >
-             <a th:href="@{/api/users/register}" th:class="text-decoration-none"><input type="button" value="Register" class="btn btn-block btn-primary" ></a>
-              <span class="d-block text-left my-4 text-muted">&mdash; or login with &mdash;</span>
-              
-              <div class="social-login">
-                <a href="#" class="facebook">
-                  <span class="icon-facebook mr-3"></span> 
-                </a>
-                <a href="#" class="twitter">
-                  <span class="icon-twitter mr-3"></span> 
-                </a>
-                <a href="#" class="google">
-                  <span class="icon-google mr-3"></span> 
-                </a>
-              </div>
+              <input type="submit" value="Đăng nhập" class="btn btn-block btn-primary mb-2" >
+             <a th:href="@{/api/users/register}" th:class="text-decoration-none"><input type="button" value="Đăng ký" class="btn btn-block btn-primary" ></a>
+<!--              <span class="d-block text-left my-4 text-muted">&mdash; or login with &mdash;</span>-->
+<!--              -->
+<!--              <div class="social-login">-->
+<!--                <a href="#" class="facebook">-->
+<!--                  <span class="icon-facebook mr-3"></span> -->
+<!--                </a>-->
+<!--                <a href="#" class="twitter">-->
+<!--                  <span class="icon-twitter mr-3"></span> -->
+<!--                </a>-->
+<!--                <a href="#" class="google">-->
+<!--                  <span class="icon-google mr-3"></span> -->
+<!--                </a>-->
+<!--              </div>-->
             </form>
             </div>
           </div>
