--- a/d1-master/Project_Economic/src/main/resources/templates/register/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/register/index.html
@@ -32,15 +32,15 @@
           <div class="row justify-content-center">
             <div class="col-md-8">
               <div class="mb-4">
-              <h3>Register now</h3>
-              <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>
+              <h3>Đăng ký ngay</h3>
+<!--              <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>-->
             </div>
               <div th:if="${error}" th:class="align-items-center">
                 <h6 th:text="${error}" th:class="text-danger"></h6>
               </div>
             <form action="#" method="post" th:action="@{/api/users/register}" th:object="${userEntity}">
               <div class="form-group first mb-2">
-                <input type="text" class="form-control" id="username" placeholder="Username" th:field="*{username}">
+                <input type="text" class="form-control" id="username" placeholder="Tài khoản" th:field="*{username}">
 
               </div>
               <div class="form-group first mb-2">
@@ -48,31 +48,30 @@
 
               </div>
               <div class="form-group last mb-2">
-                <input type="password" class="form-control" id="password" placeholder="Password" th:field="*{password}">
+                <input type="password" class="form-control" id="password" placeholder="Mật khẩu" th:field="*{password}">
               </div>
-              
-              <div class="d-flex mb-5 align-items-center">
-                <label class="control control--checkbox mb-0"><span class="caption">Remember me</span>
-                  <input type="checkbox" checked="checked"/>
-                  <div class="control__indicator"></div>
-                </label>
-              </div>
+<!--              <div class="d-flex mb-5 align-items-center">-->
+<!--                <label class="control control&#45;&#45;checkbox mb-0"><span class="caption">Remember me</span>-->
+<!--                  <input type="checkbox" checked="checked"/>-->
+<!--                  <div class="control__indicator"></div>-->
+<!--                </label>-->
+<!--              </div>-->
 
-              <a  th:href="@{/api/users/login}" th:class="text-decoration-none"><input type="button" value="Log In" class="btn btn-block btn-primary text-center"></a>
-              <input type="submit" value="Register" class="btn btn-block btn-primary mt-2">
-              <span class="d-block text-left my-4 text-muted">&mdash; or login with &mdash;</span>
-              
-              <div class="social-login">
-                <a href="#" class="facebook">
-                  <span class="icon-facebook mr-3"></span> 
-                </a>
-                <a href="#" class="twitter">
-                  <span class="icon-twitter mr-3"></span> 
-                </a>
-                <a href="#" class="google">
-                  <span class="icon-google mr-3"></span> 
-                </a>
-              </div>
+              <a  th:href="@{/api/users/login}" th:class="text-decoration-none"><input type="button" value="Đăng nhập" class="btn btn-block btn-primary text-center"></a>
+              <input type="submit" value="Đăng ký" class="btn btn-block btn-primary mt-2">
+<!--              <span class="d-block text-left my-4 text-muted">&mdash; or login with &mdash;</span>-->
+
+<!--              <div class="social-login">-->
+<!--                <a href="#" class="facebook">-->
+<!--                  <span class="icon-facebook mr-3"></span> -->
+<!--                </a>-->
+<!--                <a href="#" class="twitter">-->
+<!--                  <span class="icon-twitter mr-3"></span> -->
+<!--                </a>-->
+<!--                <a href="#" class="google">-->
+<!--                  <span class="icon-google mr-3"></span> -->
+<!--                </a>-->
+<!--              </div>-->
             </form>
             </div>
           </div>
