--- a/d1-master/Project_Economic/src/main/resources/static/css/stylehome.css
+++ b/d1-master/Project_Economic/src/main/resources/static/css/stylehome.css
@@ -2425,48 +2425,10 @@ h2 {
     background-color: #166fe5;
 }
 
-/*.p-size {*/
-/*    margin-bottom: 20px;*/
-/*}*/
-
-/*.size-options label {*/
-/*    display: inline-block;*/
-/*    margin-right: 10px;*/
-/*    padding: 8px 12px;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.size-options input:checked + label {*/
-/*    background-color: #007bff;*/
-/*    color: #fff;*/
-/*}*/
-
-/*.p-color {*/
-/*    margin-bottom: 20px;*/
-/*}*/
-
-/*.abc label {*/
-/*    display: inline-block;*/
-/*    margin-right: 10px;*/
-/*    padding: 8px 12px;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.abc input:checked + label {*/
-/*    background-color: #007bff;*/
-/*    color: #fff;*/
-/*}*/
-
-/* Style for the size container */
-.p-size {
+.tt {
     margin-bottom: 20px;
 }
 
-/* Style for the size options */
 .size-options label {
     display: inline-block;
     margin-right: 10px;
@@ -2476,39 +2438,40 @@ h2 {
     cursor: pointer;
 }
 
-/* Style for the icon inside the size options */
-.size-options i {
-    margin-right: 5px;
-}
-
-/* Style for the selected size */
 .size-options input:checked + label {
     background-color: #007bff;
     color: #fff;
 }
 
-/* Style for the color container */
 .p-color {
     margin-bottom: 20px;
 }
 
-/* Style for the color options */
+input[type="radio"]{
+    display: none;
+}
+
 .abc label {
-    display: inline-block;
+    position: relative;
+    color: #FF6F61;
+    display: inline-flex;
+    gap: 0.8em;
     margin-right: 10px;
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 6px 12px;
+    border: 1px solid #FF6F61;
+    border-radius: 0.25rem;
+
     cursor: pointer;
 }
 
-/* Style for the icon inside the color options */
-.abc i {
-    margin-right: 5px;
+input[type="radio"]:checked + label{
+    background-color: #FF6F61;
+    color: #ffffff;
 }
 
-/* Style for the selected color */
-.abc input:checked + label {
-    background-color: #007bff;
-    color: #fff;
-}
+
+
+/*.abc input:checked + label {*/
+/*    background-color: #007bff;*/
+/*    color: #fff;*/
+/*}*/
