--- a/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
@@ -92,61 +92,38 @@
                                                 <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                             </div>
                                         </div>
-<!--                                        <div class="p-size">-->
-<!--                                            <h4>Kích thước:</h4>-->
-<!--                                            <div class="btn-group btn-group-sm">-->
-<!--                                                <button type="button" class="btn">S</button>-->
-<!--                                                <button type="button" class="btn">M</button>-->
-<!--                                                <button type="button" class="btn">L</button>-->
-<!--                                                <button type="button" class="btn">XL</button>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                        <div class="p-color">-->
-<!--                                            <h4>Màu sắc:</h4>-->
-<!--                                            <div class="btn-group btn-group-sm">-->
-<!--                                                <button type="button" class="btn">Trắng</button>-->
-<!--                                                <button type="button" class="btn">Đen</button>-->
-<!--                                                <button type="button" class="btn">Xanh</button>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
                                         <div class="p-size">
                                             <div style="display:inline-block">
-                                                <h4>Kích thước:</h4>
-                                                <div class="size-options btn-group btn-group-sm">
-                                                    <label>
-                                                        <input type="radio" name="size" value="S">S
-
+                                                <h4>Màu sắc:</h4>
+                                                <div class="abc size-options btn-group btn-group-sm">
+                                                    <input type="radio" name="size" id = "s" checked = "checked" value = "S"/>
+                                                    <label for="s">S
                                                     </label>
-                                                    <label>
-                                                        <input type="radio" name="size" value="M">M
-
+                                                    <input type="radio" name="size" id = "m" value = "M"/>
+                                                    <label for="m">M
                                                     </label>
-                                                    <label>
-                                                        <input type="radio" name="size" value="L">L
-
+                                                    <input type="radio" name="size" id = "l" value = "L"/>
+                                                    <label for="l">L
                                                     </label>
-                                                    <label>
-                                                        <input type="radio" name="size" value="XL">XL
-
+                                                    <input type="radio" name="size" id = "xl" value = "XL"/>
+                                                    <label for="xl">XL
                                                     </label>
                                                 </div>
                                             </div>
                                         </div>
 
-
-
                                         <div class="p-color">
                                             <div>
                                                 <h4>Màu sắc:</h4>
-                                                <div class="abc btn-group btn-group-sm">
-                                                    <label>
-                                                        <input type="radio" name="color" value="Trắng"> Trắng
+                                                <div class="abc size-options btn-group btn-group-sm">
+                                                    <input type="radio" name="color" id = "red" checked = "checked" value = "Đỏ"/>
+                                                    <label for="red">Đỏ
                                                     </label>
-                                                    <label>
-                                                        <input type="radio" name="color" value="Đen"> Đen
+                                                    <input type="radio" name="color" id = "white" value = "Trắng"/>
+                                                    <label for="white">Trắng
                                                     </label>
-                                                    <label>
-                                                        <input type="radio" name="color" value="Xanh"> Xanh
+                                                    <input type="radio" name="color" id = "blue" value = "Xanh"/>
+                                                    <label for="blue">Xanh
                                                     </label>
                                                 </div>
                                             </div>
@@ -155,7 +132,7 @@
                                         <div class="action">
                                             <button class="btn btnAddProductToCart" href="#"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
 <!--                                            <button class="btn" href="#"><i class="fa fa-shopping-bag"></i>Mua ngay</button>-->
-                                            <button class="btn" onclick="buy_product()"><i class="fa fa-shopping-bag"></i>Mua ngay</button>
+                                            <button onclick="getNumberCartInEveryPage()" class="btn btnAddProductToCart"><i class="fa fa-shopping-bag"></i>Mua ngay</button>
                                         </div>
                                     </div>
                                 </div>
