--- a/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
@@ -85,7 +85,7 @@
                                 <label>Chọn ảnh</label>
                                 <input type="file" name="imageProduct" id="imageProduct">
                             </div>
-                            <input type="hidden" th:field="*{sellerId}" th:id="sellerIdInput" />
+                            <input type="hidden" th:field="*{sellerId}" id="sellerIdInput" />
                             <button type="submit" class="btn btn-success mt-4">Tạo</button>
                         </form>
 
@@ -218,8 +218,8 @@
                             </thead>
                             <tbody>
                             <tr th:each="count:${countProductByCategory}">
-                                <th scope="row" th:text="${categories.get(count.getCategoryId()-1).getName()}"></th>
-                                <td th:text="${count.getCount()}">Mark</td>
+                                <th scope="row" th:text="${categories.get(1).getName()}"></th>
+<!--                                <td th:text="${count[1]}">Mark</td>-->
                             </tr>
                             </tbody>
                         </table>
@@ -293,17 +293,17 @@
     //         console.error('Không tìm thấy ID');
     //     }
     // }
-    // var userId = getUserId();
+    const userId = getUserId();
     // $.ajax({
     //     type: "POST",
-    //     url: "/api/products/create",
+    //     url: "/api/products/create/" + {usedId},
     //     data: { userId: userId },
     // }).done(function (res) {
     //     console.log('Phản hồi về backend:', res);
     // }).fail(function (error) {
     //     console.error('Lỗi khi gửi dữ liệu đến backend:', error);
     // });
-    var userId = getUserId();
+
     document.getElementById("sellerIdInput").value = userId;
     document.querySelector("form").addEventListener("submit", function (event) {
         if (!document.getElementById("sellerIdInput").value) {
