--- a/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
@@ -272,39 +272,7 @@
         }
         return userId;
     }
-
-    // function sendUserIdToBackend() {
-    //     var userId = getUserId();
-    //
-    //     if (userId !== '') {
-    //         $.ajax({
-    //             type: "POST",
-    //             url: "/api/sendUserId",
-    //             contentType: "application/json",
-    //             data: JSON.stringify({ userId: userId }),
-    //             success: function(data) {
-    //                 console.log('Phản hồi thành công:', data);
-    //             },
-    //             error: function(error) {
-    //                 console.error('Lỗi gửi dữ liệu:', error);
-    //             }
-    //         });
-    //     } else {
-    //         console.error('Không tìm thấy ID');
-    //     }
-    // }
     const userId = getUserId();
-    // $.ajax({
-    //     type: "POST",
-    //     url: "/api/products/create/" + {usedId},
-    //     data: { userId: userId },
-    // }).done(function (res) {
-    //     console.log('Phản hồi về backend:', res);
-    // }).fail(function (error) {
-    //     console.error('Lỗi khi gửi dữ liệu đến backend:', error);
-    // });
-    //6
-
     document.getElementById("sellerIdInput").value = userId;
     document.querySelector("form").addEventListener("submit", function (event) {
         if (!document.getElementById("sellerIdInput").value) {
@@ -312,6 +280,17 @@
             console.error("Lỗi");
         }
     });
+    $.ajax({
+        type: "GET",
+        url: "/api/products/create/" + {usedId},
+        data: { userId: userId },
+    }).done(function (res) {
+        console.log('Phản hồi về backend:', res);
+    }).fail(function (error) {
+        console.error('Lỗi khi gửi dữ liệu đến backend:', error);
+    });
+
+
 
 
 </script>
