--- a/d1-master/Project_Economic/src/main/resources/templates/home/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/index.html
@@ -37,7 +37,7 @@
                                 <a th:href="@{/api/products/all/1}" class="nav-item nav-link">Sản phẩm</a>
                                 <a href="#" class="nav-item nav-link" onclick="getNumberCartInEveryPage()">Giỏ hàng</a>
                                 <a th:href="@{/api/users/categories}" class="nav-item nav-link">Danh mục</a>
-                                <a th:href="@{/api/products/create}" class="nav-item nav-link">Tạo sản phẩm</a>
+                                <a href="#"  class="nav-item nav-link" onclick="getCreateProduct()"> Tạo sản phẩm</a>
                                 <a href="#" class="nav-item nav-link" onclick="topageHistory()">Tài khoản</a>
                             </div>
                             <div class="navbar-nav ml-auto">
