--- a/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
@@ -132,7 +132,7 @@
                                         <div class="action">
                                             <button class="btn btnAddProductToCart" href="#"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
 <!--                                            <button class="btn" href="#"><i class="fa fa-shopping-bag"></i>Mua ngay</button>-->
-                                            <button onclick="getNumberCartInEveryPage()" class="btn btnAddProductToCart"><i class="fa fa-shopping-bag"></i>Mua ngay</button>
+                                            <button style="margin-left: 7px" onclick="getNumberCartInEveryPage()" class="btn btnAddProductToCart"><i class="fa fa-shopping-bag"></i>Mua ngay</button>
                                         </div>
                                     </div>
                                 </div>
@@ -142,64 +142,45 @@
                             <div class="col-lg-12">
                                 <ul class="nav nav-pills nav-justified">
                                     <li class="nav-item">
-                                        <a class="nav-link active" data-toggle="pill" href="#description">Mô tả sản phẩm</a>
+                                        <a class="nav-link active" data-toggle="pill" href="#description" data-target="#description">Mô tả sản phẩm</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" data-toggle="pill" href="#reviews">Đánh giá</a>
+                                        <a class="nav-link" data-toggle="pill" href="#reviews" data-target="#reviews">Đánh giá</a>
                                     </li>
                                 </ul>
 
                                 <div class="tab-content">
                                     <div id="description" class="container tab-pane active">
 <!--                                        <h4>Product description</h4>-->
-                                        <p th:text="${product.getDescription()}">
-                                        </p>
+                                        <p th:text="${product.getDescription()}"></p>
                                     </div>
-                                    <div  class="container ">
-                                        <h4>Nhận xét</h4>
+                                    <div id="reviews" class="container comment-form container tab-pane fade active show">
+<!--                                        <h4>Nhận xét</h4>-->
                                         <div id="box_comment_product">
-
-                                            <div th:each="comment:${comments}" id="chatbox" th:class="${'commentParent_'+comment.getId()}" th:style="'margin-left: ' + ${comment.getStep()*30} + 'px;'" >
+                                            <div th:each="comment:${comments}" id="chatbox" class="reviewer" th:class="${'commentParent_'+comment.getId() }">
                                                 <div class="boxmessage" style="display: flex;flex-direction: column;" id="usersendMessage" >
-                                                    <div class="avatar" id="avatarDiv" >
-                                                        <h4 th:text="${comment.getUserName()}" class="textUserName">HD</h4>
+                                                    <div class="avatar reviewer" id="avatarDiv"  th:text="${comment.getUserName()}">
+                                                        <br>
+                                                        <h4  class="textUserName">HD</h4>
+
                                                     </div>
                                                     <div id="contentComent" role="alert" style="margin-top: 8px;" th:text="${comment.getContent()}">
-                                                        This is a primary alert—check it out! afadsfaddaadfad
+                                                         is a primary alert—check it out! afadsfaddaadfad
                                                     </div>
+                                                    <br>
 <!--                                                    <button th:onclick="showFormRepComment([[${comment.getId()}]])" style="width: max-content" class="btn1_repcomment">-->
 <!--                                                        <h5>Rep</h5>-->
-<!--                                                    </button>-->
-                                                    <div style="width: 100%;display: none" th:class="${'form-rep-comment'+comment.getId()}">
-                                                        <input name="comment" placeholder="Write a comment" th:id="${'textarea-comment-rep'+comment.getId()}"></input>
-                                                        <button type="submit" id="btn-comment-rep" th:onclick="postRepComment([[${comment.getId()}]])">Rep Comment</button>
-                                                    </div>
+<!--                                                    </butt  on>-->
+
+<!--                                                    <div style="width: 100%;display: none" th:class="${'form-rep-comment'+comment.getId()}">-->
+<!--                                                        <input name="comment" placeholder="Write a comment" th:id="${'textarea-comment-rep'+comment.getId()}"></input>-->
+<!--                                                        <button type="submit" id="btn-comment-rep" th:onclick="postRepComment([[${comment.getId()}]])">Rep Comment</button>-->
+<!--                                                    </div>-->
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="comment-form">
-                                            <div style="width: 100%">
-                                                <input name="comment" placeholder="Write a comment" id="textarea-comment"></input>
-                                                <button type="submit" id="btn-comment" th:onclick="postFirstCommentInPost([[${productId}]])">Comment</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Reviews -->
-                                    <div id="reviews" class="container tab-pane fade">
-                                        <div class="reviews-submitted">
-                                            <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>
-                                            <div class="ratting">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                            </div>
-                                            <p>
-                                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
-                                            </p>
-                                        </div>
-                                        <div class="reviews-submit">
+                                        <br>
+                                        <div  class="comment-form reviews-submit">
                                             <h4>Give your Review:</h4>
                                             <div class="ratting">
                                                 <i class="far fa-star"></i>
@@ -208,22 +189,54 @@
                                                 <i class="far fa-star"></i>
                                                 <i class="far fa-star"></i>
                                             </div>
-                                            <div class="row form">
-<!--                                                <div class="col-sm-6">-->
-<!--                                                    <input type="text" placeholder="Name">-->
-<!--                                                </div>-->
-<!--                                                <div class="col-sm-6">-->
-<!--                                                    <input type="email" placeholder="Email">-->
-<!--                                                </div>-->
-                                                <div class="col-sm-12">
-                                                    <textarea placeholder="Review"></textarea>
-                                                </div>
-                                                <div class="col-sm-12">
-                                                    <button>Submit</button>
-                                                </div>
+                                            <div style="width: 100%" class="col-sm-12 row form">
+                                                <textarea style="display: block; width: 100%" name="comment" placeholder="Review" id="textarea-comment"></textarea>
+                                                <button style="display: block; width:100%; margin-top:10px;" type="submit" id="btn-comment" th:onclick="postFirstCommentInPost([[${productId}]])">Comment</button>
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Reviews -->
+<!--                                    <div id="reviews" class="container tab-pane fade">-->
+<!--                                        <div class="reviews-submitted">-->
+<!--                                            <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>-->
+<!--                                            <div class="ratting">-->
+<!--                                                <i class="fa fa-star"></i>-->
+<!--                                                <i class="fa fa-star"></i>-->
+<!--                                                <i class="fa fa-star"></i>-->
+<!--                                                <i class="fa fa-star"></i>-->
+<!--                                                <i class="fa fa-star"></i>-->
+<!--                                            </div>-->
+<!--                                            <p>-->
+<!--                                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.-->
+<!--                                            </p>-->
+<!--                                        </div>-->
+<!--                                        <div class="reviews-submit">-->
+
+<!--                                            <h4>Give your Review:</h4>-->
+
+<!--                                            <div class="ratting">-->
+<!--                                                <i class="far fa-star"></i>-->
+<!--                                                <i class="far fa-star"></i>-->
+<!--                                                <i class="far fa-star"></i>-->
+<!--                                                <i class="far fa-star"></i>-->
+<!--                                                <i class="far fa-star"></i>-->
+<!--                                            </div>-->
+<!--                                            <div class="row form">-->
+<!--&lt;!&ndash;                                                <div class="col-sm-6">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                    <input type="text" placeholder="Name">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <div class="col-sm-6">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                    <input type="email" placeholder="Email">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                </div>&ndash;&gt;-->
+<!--                                                <div class="col-sm-12">-->
+<!--                                                    <textarea placeholder="Review"></textarea>-->
+<!--                                                </div>-->
+<!--                                                <div class="col-sm-12">-->
+<!--                                                    <button>Submit</button>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
                                 </div>
                             </div>
                         </div>
