--- a/d1-master/Project_Economic/src/main/resources/templates/home/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/index.html
@@ -45,7 +45,7 @@
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" th:text="${username}" id="usernameweb"></a>
                                     <div class="dropdown-menu">
 <!--                                        <a href="#" class="dropdown-item">Login</a>-->
-                                        <a href="/api/logout" class="dropdown-item" onclick="removeInfo()">Logout</a>
+                                        <a href="/api/logout" class="dropdown-item" onclick="removeInfo()">Đăng xuất</a>
 <!--                                        <a href="#" class="dropdown-item">Register</a>-->
                                     </div>
                                 </div>
