--- a/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/product-detail.html
@@ -65,7 +65,6 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div th:if="${findProductInCart}">
-<!--                                        <h4 class="text-success">Products already in the cart</h4>-->
                                         <h4 class="text-success">Sản phẩm đã có trong giỏ hàng</h4>
                                     </div>
                                     <div class="product-content">
@@ -154,28 +153,26 @@
 <!--                                        <h4>Product description</h4>-->
                                         <p th:text="${product.getDescription()}"></p>
                                     </div>
-                                    <div id="reviews" class="container comment-form container tab-pane fade active show">
-<!--                                        <h4>Nhận xét</h4>-->
+                                    <div id="reviews" class="container comment-form container tab-pane fade">
                                         <div id="box_comment_product">
-                                            <div th:each="comment:${comments}" id="chatbox" class="reviewer" th:class="${'commentParent_'+comment.getId() }">
-                                                <div class="boxmessage" style="display: flex;flex-direction: column;" id="usersendMessage" >
-                                                    <div class="avatar reviewer" id="avatarDiv"  th:text="${comment.getUserName()}">
+                                            <div th:each="comment:${comments}" id="chatbox" class="reviewer" th:class="${'commentParent_'+comment.getId() }" th:style="'margin-left: ' + ${comment.getStep()*30} + 'px;'" >
+                                                <div class="boxmessage col-sm-12 row form" style="display: flex;flex-direction: column;" id="usersendMessage" >
+                                                    <div class="avatar reviewer" id="avatarDiv" style="display: flex; align-items: center;" >
                                                         <br>
-                                                        <h4  class="textUserName">HD</h4>
+                                                        <span style="color: #FF6F61; font-size: 18px; font-family: 'Open Sans', sans-serif; font-weight:600" th:text="${comment.getUserName()} + ' - '"></span>
+                                                        <h6 th:text="${comment.getDateCreate()}" style="font-size: 14px; color: #666666; font-weight: 400;font-family: 'Open Sans', sans-serif; margin: 0px; margin-left: 2.5px"></h6>
 
                                                     </div>
                                                     <div id="contentComent" role="alert" style="margin-top: 8px;" th:text="${comment.getContent()}">
-                                                         is a primary alert—check it out! afadsfaddaadfad
                                                     </div>
-                                                    <br>
-<!--                                                    <button th:onclick="showFormRepComment([[${comment.getId()}]])" style="width: max-content" class="btn1_repcomment">-->
-<!--                                                        <h5>Rep</h5>-->
-<!--                                                    </butt  on>-->
+                                                    <button th:onclick="showFormRepComment([[${comment.getId()}]])" style="width: max-content; display: block; margin-top: 15px" class="btn1_repcomment col-sm-12 row form">
+                                                        Rep
+                                                    </button>
 
-<!--                                                    <div style="width: 100%;display: none" th:class="${'form-rep-comment'+comment.getId()}">-->
-<!--                                                        <input name="comment" placeholder="Write a comment" th:id="${'textarea-comment-rep'+comment.getId()}"></input>-->
-<!--                                                        <button type="submit" id="btn-comment-rep" th:onclick="postRepComment([[${comment.getId()}]])">Rep Comment</button>-->
-<!--                                                    </div>-->
+                                                    <div style="width: 100%;display: none" th:class="${'form-rep-comment'+comment.getId()}">
+                                                        <input name="comment" placeholder="Write a comment" th:id="${'textarea-comment-rep'+comment.getId()}"></input>
+                                                        <button type="submit" id="btn-comment-rep" th:onclick="postRepComment([[${comment.getId()}]])">Rep Comment</button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -198,7 +195,6 @@
                                     <!-- Reviews -->
 <!--                                    <div id="reviews" class="container tab-pane fade">-->
 <!--                                        <div class="reviews-submitted">-->
-<!--                                            <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>-->
 <!--                                            <div class="ratting">-->
 <!--                                                <i class="fa fa-star"></i>-->
 <!--                                                <i class="fa fa-star"></i>-->
@@ -249,7 +245,7 @@
                             <nav class="navbar bg-light">
                                 <ul class="navbar-nav">
                                     <li class="nav-item" th:each="category:${categories}">
-                                        <a class="nav-link" href="#" th:text="${category.getName()}">Fashion & Beauty 123</a>
+                                        <a class="nav-link" href="#" th:text="${category.getName()}"></a>
                                     </li>
                                 </ul>
                             </nav>
@@ -282,7 +278,7 @@
                                         </div>
                                         <div class="product-price">
                                             <h3 th:text="${product.getSalePriceFormat()}"><span>$</span>99</h3>
-                                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                            <a class="btn" th:onclick="searchProductById([[${product.id}]])"><i class="fa fa-shopping-cart"></i>Chi tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -386,8 +382,6 @@
                 </div>
             </div>
         </div>
-        <!-- Back to Top -->
-
         <!-- Back to Top -->
         <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
