--- a/d1-master/Project_Economic/src/main/resources/templates/home/product-list.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/product-list.html
@@ -251,8 +251,8 @@
                                 </div>
                             </div>
                             <div class="product-price">
-                                <h3 th:text="${product.getSalePriceFormat()}"><span>$</span>99</h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua ngay</a>
+                                <h3 th:text="${product.getSalePriceFormat()}"></h3>
+                                <a class="btn" th:onclick="searchProductById([[${product.id}]])"><i class="fa fa-shopping-cart" ></i>Chi tiết</a>
                             </div>
                         </div>
                     </div>
